--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qwik-bun-build-issue",
   "description": "Reproduction for Qwik City App build issue when using Bun",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=18.0.0"
   },
   "private": true,
   "trustedDependencies": [
@@ -13,6 +13,7 @@
     "build": "bun run --bun qwik build",
     "build.client": "bun run --bun vite build",
     "build.preview": "bun run --bun vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/bun/vite.config.ts",
     "build.types": "bun run --bun tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "bun run --bun vite --mode ssr",
@@ -21,21 +22,20 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "bun run --bun qwik build preview && bun run --bun vite preview --open",
+    "serve": "bun server/entry.bun.js",
     "start": "bun run --bun vite --open --mode ssr"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.4.5",
-    "@builder.io/qwik-city": "^1.4.5",
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.6",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-qwik": "^1.4.5",
-    "prettier": "^3.2.4",
-    "typescript": "5.3.3",
-    "undici": "*",
-    "vite": "^5.0.12",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@builder.io/qwik": "1.5.4",
+    "@builder.io/qwik-city": "1.5.4",
+    "@types/bun": "*",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "eslint": "9.2.0",
+    "eslint-plugin-qwik": "1.5.4",
+    "typescript": "5.4.5",
+    "undici": "6.17.0",
+    "vite": "5.2.11",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
