--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "bun run --bun qwik build",
-    "build.client": "bun run --bun vite build",
-    "build.preview": "bun run --bun vite build --ssr src/entry.preview.tsx",
+    "build": "bun run build.types && bun run build.client && bun run build.server",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/bun/vite.config.ts",
-    "build.types": "bun run --bun tsc --incremental --noEmit",
+    "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "bun run --bun vite --mode ssr",
     "dev.debug": "bun --inspect ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
     "preview": "bun run --bun qwik build preview && bun run --bun vite preview --open",
     "serve": "bun server/entry.bun.js",
     "start": "bun run --bun vite --open --mode ssr"
